Contextmenu z-index fix; updated changelog
Contextmenu icons were showing through the "Sort" submenu.  I added a
z-index directive that fixed that.

I also updated the What's New to include sorting open windows to the
top (commit 0e94bf5).  This required moving the icon definitions to new
/conf/icons.css so they could be loaded from both view and
options_custom.

--- a/src/view/view.css
+++ b/src/view/view.css
@@ -231,35 +231,6 @@ div#maintree {
     margin-bottom: 30px;    /* empirical, based on the hamburger menu's box */
 }
 
-/* Icons ------------------------------------------------------------------ */
-
-.visible-window-icon {
-    content: url(/assets/icons/monitor.png);    /* or folder.png? */
-}
-
-.visible-saved-window-icon {
-    content: url(/assets/icons/monitor_add.png);    /* or folder.png? */
-}
-
-.fff-page {
-    content: url(/assets/icons/page_white.png);
-}
-.fff-pencil {
-    content: url(/assets/icons/pencil.png);
-}
-
-.fff-cross {
-    content: url(/assets/icons/cross.png);
-}
-
-.fff-picture-delete {
-    content: url(/assets/icons/picture_delete.png);
-}
-
-.fff-text-padding-top {
-    content: url(/assets/icons/text_padding_top.png);
-}
-
 /* ////////////////////////////////////////////////////////////////////// */
 /* Tweak up jstree */
 
@@ -278,6 +249,13 @@ div#maintree {
 /* Don't expand icons in the context menu - leave them at their native size */
 ul.jstree-contextmenu i {
     object-fit: none;
+}
+
+/* Make icons from the main menu not appear through the submenu.  The jstree
+ * css sets position:absolute, so setting z-index creates a new stacking
+ * context for the submenu. */
+.vakata-context ul {
+    z-index: 1;
 }
 
 /* vi: set ts=4 sts=4 sw=4 et ai: */
